--- a/frontend/app/views/joiner/tier/patron.scala.html
+++ b/frontend/app/views/joiner/tier/patron.scala.html
@@ -3,81 +3,47 @@
 
 @main("Patrons", isBrochure = true, htmlClass = "patron-page") {
 
-    @* ===== Homepage hero ===== *@
+    @* ===== Patron hero ===== *@
 
     <div class="home-slice home-slice--epic u-cf">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
-                <h1 class="home-slice__headline">Become a patron</h1>
+                <h1 class="home-slice__headline">Patrons of the Guardian</h1>
             </div>
             <div class="home-slice__copy-block">
-                <p class="home-slice__copy"></p>
-                <p class="home-slice__copy">Guardian Membership is the community for those who share this belief.</p>
-                <a class="action action--join home-slice__action action--secondary-button" href="/about">Learn more</a>
-                <p class="home-slice__copy">Guardian Membership brings you closer to the stories of the day,
-                    connects you to the conversations that matter and introduces you to fellow members who share
-                    your interests.</p>
-                <a class="action action--join home-slice__action" href="/join">Join today</a>
+                <p class="home-slice__copy">The Patron tier is for those who care deeply about the Guardian’s journalism and the impact it has on the world.</p>
+                <p class="home-slice__copy">From campaigning on issues affecting the voices less heard to holding those in power to account, Patrons ensure the Guardian can continue to surface the information and ideas that shape the global conversation.</p>
+
+                @* === Patron === *@
+
+                <div class="join-today__join-box join-today__join-box--stripped-down-standalone">
+                    <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
+                    <div class="join-today__price l-row">
+                        <div class="join-today__price--bold l-row__item">£540/year<span class="save-price">Save
+                            £135/yr</span></div>
+                        <div class="join-today__sep l-row__item"></div>
+                        <div class="join-today__price--bold l-row__item">£60/month</div>
+                    </div>
+                    <div class="join-today__teaser">
+                        <a class="action action--secondary-button" href="/join/patron/enter-details">
+                            <span class="action__text">Become a Patron today</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    @* ===== Bring the Guardian to life ===== *@
+    @* ===== Ensuring our independence ===== *@
 
     <div class="home-slice u-cf home-slice--red home-slice--slice-two">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
-                <h2 class="home-slice__headline">Events that bring the Guardian to life</h2>
+                <h2 class="home-slice__headline">Ensuring our independence</h2>
             </div>
             <div class="home-slice__copy-block">
-                <p class="home-slice__copy">Guardian Live is a programme of discussions, debates, interviews,
-                    keynote speeches and festivals.
-                </p>
-                <p class="home-slice__copy">Members can attend events that take the power of open journalism
-                    from print and digital into live experiences.
-                </p>
-                <a class="action action--secondary-button" href="/events">See our live events</a>
-            </div>
-        </div>
-    </div>
-
-    @* ===== Fuels our journalism ===== *@
-
-    <div class="home-slice home-slice--content u-cf">
-        <div class="home-slice__inner u-cf">
-            <div class="home-slice__headline-block">
-                <h2 class="home-slice__headline">Membership fuels our journalism</h2>
-            </div>
-            <div class="home-slice__copy-block">
-                <div class="home-slice__media">
-                    <img src="@Asset.at("images/homepage/new/alan_pulitzer_prize_speech.jpg")" alt="" />
-                </div>
-                <div class="home-slice__offset-copy">
-                    <blockquote class="home-slice__copy--quote">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.</blockquote>
-                    <cite class="home-slice__copy--cite">Alan Rusbridger, editor-in-chief of the Guardian</cite>
-                    <a class="action action--join" href="/join/patron">Start your journey as Patron</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    @* ===== Big ideas ===== *@
-
-    <div class="home-slice u-cf home-slice--green home-slice--slice-four">
-        <div class="home-slice__inner u-cf">
-            <div class="home-slice__headline-block">
-                <h2 class="home-slice__headline">A home for big ideas</h2>
-            </div>
-            <div class="home-slice__copy-block">
-                <p class="home-slice__copy">
-                    In 2016, the Guardian will reopen the Midland Goods Shed at London’s King’s Cross to create a new kind of civic space.
-                </p>
-                <p class="home-slice__copy">
-                    The building will be a hub for big ideas and stimulating conversations. It will host events,
-                    activities and courses from Guardian Live and institutions we admire, as well as being the home of Guardian Membership.
-                </p>
-                <a class="action action--join" href="http://www.theguardian.com/membership">More about the building</a>
-                <a class="action action--secondary-button" href="http://www.theguardian.com/membership">Building progress blog</a>
+                <p class="home-slice__copy">The Guardian has no proprietor.  Our editor has total independence.</p>
+                <p class="home-slice__copy">The support of Patrons ensures that the Guardian remains standing witness to the world, without interference.</p>
             </div>
         </div>
     </div>
@@ -87,20 +53,44 @@
     <div class="home-slice home-slice--content u-cf">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
-                <h2 class="home-slice__headline">Founding members: join us at the start</h2>
+                <h2 class="home-slice__headline">Backstage pass to the Guardian</h2>
             </div>
             <div class="home-slice__copy-block">
                 <div class="home-slice__media">
                     <img src="@Asset.at("images/homepage/new/audience_discussion1.jpg")" alt="" />
                 </div>
                 <div class="home-slice__offset-copy">
-                    <p class="home-slice__copy">
-                        Guardian membership is launching in beta. We have ambitious plans, and new features will be added regularly. Guardian membership will grow into a vibrant, self-organising community of free-thinkers.
-                    </p>
-                    <p class="home-slice__copy">
-                        Help to build and shape this community by joining as a Founding Partner or Patron,
-                        with the guarantee that the price you pay today will never rise.</p>
-                    <a class="action action--join" href="/join" id="qa-join">Join today</a>
+                    <p class="home-slice__copy">In return for your support, Patrons are given a behind-the-scenes view of how the Guardian operates.  For example, tour our newsroom, visit our printing presses or attend a campaign lecture.</p>
+                    <a class="action action--join home-slice__action" href="/join/patron/enter-details">Become a Patron today</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    @* ===== Backstage pass to the Guardian ===== *@
+
+    <div class="home-slice u-cf home-slice--green home-slice--slice-four">
+        <div class="home-slice__inner u-cf">
+            <div class="home-slice__headline-block">
+                <h2 class="home-slice__headline">Choose to get involved</h2>
+            </div>
+            <div class="home-slice__copy-block">
+                <p class="home-slice__copy">Patrons are crucial to the future development of Membership, and there will be opportunities to get involved.  From hosting your own events to connecting members to one another, you will shape the future of the community.</p>
+                @* === Patron === *@
+
+                <div class="join-today__join-box join-today__join-box--stripped-down-standalone">
+                    <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
+                    <div class="join-today__price l-row">
+                        <div class="join-today__price--bold l-row__item">£540/year<span class="save-price">Save
+                            £135/yr</span></div>
+                        <div class="join-today__sep l-row__item"></div>
+                        <div class="join-today__price--bold l-row__item">£60/month</div>
+                    </div>
+                    <div class="join-today__teaser">
+                        <a class="action action--secondary-button" href="/join/patron/enter-details">
+                            <span class="action__text">Become a Patron today</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -110,7 +100,7 @@
 
     <div class="home-slice home-slice--join-today">
         <div class="home-slice__inner u-cf">
-            <h2 class="home-slice__headline">Join membership today</h2>
+            <h2 class="home-slice__headline">Not ready for the Patron tier yet?<br />Join as a Friend or a Partner</h2>
             <ul class="l-row u-unstyled join-today__join-boxes">
 
                 @* === Friend === *@
@@ -146,26 +136,8 @@
                     </div>
                 </li>
 
-                @* === Patron === *@
-
-                <li class="join-today__join-box l-row__item">
-                    <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
-                    <div class="join-today__price l-row">
-                        <div class="join-today__price--bold l-row__item">£540/year<span class="save-price">Save
-                            £135/yr</span></div>
-                        <div class="join-today__sep l-row__item"></div>
-                        <div class="join-today__price--bold l-row__item">£60/month</div>
-                    </div>
-                    <div class="join-today__teaser">
-                        <p class="join-today__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
-                        <a class="action action--secondary-button" href="/join/patron">
-                            <span class="action__text">Learn more about Patrons</span>
-                        </a>
-                    </div>
-                </li>
-
-
             </ul>
         </div>
     </div>
+
 }
