--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -1,39 +1,19 @@
 @(eventOpt: Option[model.RichEvent.RichEvent], pageInfo: model.PageInfo)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import com.gu.membership.salesforce.Tier
-@import model.Eventbrite.GuLiveEvent
-@import model.Eventbrite.MasterclassEvent
-
-@title = @{
-    eventOpt.fold {
-        "Choose a membership tier"
-    } {
-        case _: MasterclassEvent => "Choose a membership tier to continue with your booking"
-        case _: GuLiveEvent => "Guardian Live events are exclusively for Guardian members"
-    }
-}
-
-@sectionTitle = @{
-    eventOpt.fold {
-        "Choose a membership tier to continue with your booking"
-    } {
-        case _: MasterclassEvent => "Become a Partner or Patron to save 20% on your masterclass"
-        case _: GuLiveEvent => "Choose a membership tier to continue with your booking"
-    }
-}
 
 @main("Join Choose Tier", pageInfo=pageInfo) {
 
     <main role="main" class="page-content">
 
-        @fragments.page.pageHeader(title)
+        @fragments.page.pageHeader(eventOpt.fold("Choose a membership tier")(_.metadata.chooseTier.title))
 
         <section class="page-section page-section--no-padding">
             <div class="page-section__lead-in">
                 @fragments.joiner.joinStepCounter(1, 3)
             </div>
             <div class="page-section__content">
-                <h2 class="h-section h-section--lead">@sectionTitle</h2>
+                <h2 class="h-section h-section--lead">@eventOpt.fold("Choose a membership tier to continue with your booking")(_.metadata.chooseTier.sectionTitle)</h2>
                 <ul class="grid grid--single-row grid--bordered grid--3up-stacked">
                     <li class="grid__item">
                         @fragments.tier.packagePromo(Tier.Friend, Some("#package-benefits-friend"))
