--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -59,18 +59,18 @@
                 <div class="event-ticket event-ticket--aligned">
                     <div class="event-ticket__details">
                         <span class="block-level event-ticket__details__status">
-                            @if(event.isSoldOut && event.status == "live") { Sold out } else { Past event }
+                            @if(event.isPastEvent) { Past event } else { Sold out }
                         </span>
                     </div>
                     <div class="event-ticket__action">
-                        @if(event.isSoldOut && event.status == "live") {
-                            <a class="action action--external u-no-margin" href="@Config.eventbriteWaitlistUrl?eid=@event.id&amp;tid=0" data-link-name="Join waitlist">
-                                Add me to the waitlist
-                            </a>
-                        } else {
+                        @if(event.isPastEvent) {
                             @for(highlightsUrl <- event.metadata.highlightsUrlOpt) {
                                 <a class="action action--external action--buy-event-ticket-details" href="@highlightsUrl" data-link-name="Watch highlights">Watch highlights of past events</a>
                             }
+                        } else {
+                            <a class="action action--external u-no-margin" href="@Config.eventbriteWaitlistUrl(event)" data-link-name="Join waitlist">
+                                Add me to the waitlist
+                            </a>
                         }
                     </div>
                 </div>
@@ -114,11 +114,11 @@
                         @if(!event.isBookable) {
                             <div class="status-panel">
                                 <div class="status-panel__header">
-                                    @if(event.isSoldOut && event.status == "live") { Sold out } else { Past event }
+                                    @if(event.isPastEvent) { Past event } else { Sold out }
                                 </div>
-                                @if(event.isSoldOut && event.status == "live") {
+                                @if(!event.isPastEvent) {
                                     <div class="status-panel__content">
-                                        <a class="action action--external u-no-margin" href="@Config.eventbriteWaitlistUrl?eid=@event.id&amp;tid=0" data-link-name="Join waitlist">
+                                        <a class="action action--external u-no-margin" href="@Config.eventbriteWaitlistUrl(event)" data-link-name="Join waitlist">
                                             Add me to the waitlist
                                         </a>
                                     </div>
